--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="cv.html"> home page </a>
+    <a href="index.html"> home page </a>
     <p> Contact me at boakye.dankwah@hotmail.com </p>
     <br>
     <p> Click <a href="privacy.html"> here</a> to have a view of our privacy policy</p>
