--- a/privacy.html
+++ b/privacy.html
@@ -9,7 +9,7 @@
 <body>
 
     <center>
-    <a href="cv.html"> home page </a>
+    <a href="index.html"> home page </a>
     <h2>Our Privacy Policy</h2><br> <br>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum hic illum reprehenderit unde iure quas. Corrupti amet, numquam molestias laudantium doloribus aut! .</p>
     </center>
